Implement basic index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,16 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand">The Book Club</a>
+                <a class="navbar-brand"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to (fa_icon "home 2x"), root_path %></li>
-                <li><%= link_to (fa_icon "users 2x"), '#' %></li>
-                <li><%= link_to (fa_icon "question-circle 2x"), '#' %></li>
+                <li><%= link_to (fa_icon "globe 2x"), '#' %></li>
+                <li><%= link_to (fa_icon "user 2x"), '#' %></li>
                 <% if current_user %>
-                <li><%= link_to (fa_icon "sign-out 2x"), logout_path, method: :delete %></li>
+                    <li><%= link_to (fa_icon "sign-out 2x"), logout_path, method: :delete %></li>
                 <% else %>
-                <li><%= link_to (fa_icon "sign-in 2x"), '/auth/facebook' %></li>
+                    <li><%= link_to (fa_icon "facebook 2x"), '/auth/facebook' %></li>
                 <% end %>
             </ul>
         </div>
