--- a/app/views/pages/_welcome.html.erb
+++ b/app/views/pages/_welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Welcome!</h1>
-  <p>Authenticate via one of the social networks to get started.</p>
+    <h2>Welcome to The Book Club!</h2>
+  <p>Share books that educate and entertain you. Follow the recommendations of like-minded readers.</p>
 </div>
 
