Create explore page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
             <%= image_tag current_user.image_url, class: "img-thumbnail", alt: current_user.name %>
         </div>
         <div class="col-md-8">
-            <h4>New Recommendations</h4>
+            <h4>Book Feed</h4>
         </div>
     </div>
 </div>
