--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to (fa_icon "home 2x"), root_path %></li>
-                <li><%= link_to (fa_icon "globe 2x"), '#' %></li>
+                <li><%= link_to (fa_icon "globe 2x"), explore_path %></li>
                 <% if current_user %>
                     <li><%= link_to (fa_icon "user 2x"), post_path %></li>
                     <li><%= link_to (fa_icon "sign-out 2x"), logout_path, method: :delete %></li>
