--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -4,9 +4,9 @@
         <div class="col-md-4">
             <h4>Our Readers</h4>
             <% @users.each do |user| %>
-            <h6><%= user.name %></h6>
+            <h6><%= link_to(user.name, user_path(user)) %></h6>
             <%= image_tag(user.image_url) %>
-            <% end %>
+            <% end %><br>
             <%= will_paginate @users %>
         </div>
         <div class="col-md-5">
@@ -14,8 +14,8 @@
                 <% @books.each do |book| %>
                     <h5><%= link_to(book.title, book.info) %> by <%= book.author %></h5>
                         <%= image_tag(book.image) if book.image %>
-                        <p><%= link_to(book.user.name, '#') %> recommends this <%= book.pages %> page volume</p><br>
-                <% end %>
+                        <p><%= link_to(book.user.name, user_path(book.user)) %> recommends this <%= book.pages %> page volume</p><br>
+                <% end %><br>
         </div>
     </div>
 </div>
