--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,20 +3,17 @@
   <head>
     <title>Book Club</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand"></a>
-            </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to (fa_icon "home 2x"), root_path %></li>
                 <li><%= link_to (fa_icon "globe 2x"), explore_path %></li>
                 <% if current_user %>
-                    <li><%= link_to (fa_icon "user 2x"), post_path %></li>
+                    <li><%= link_to (fa_icon "pencil-square-o 2x"), post_path %></li>
                     <li><%= link_to (fa_icon "sign-out 2x"), logout_path, method: :delete %></li>
                 <% else %>
                     <li><%= link_to (fa_icon "facebook 2x"), '/auth/facebook' %></li>
@@ -27,11 +24,11 @@
   <body>
     <div class="container">
         <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>">
-            <%= value %>
-        </div>
+            <div class="alert alert-<%= key %>">
+                <%= value %>
+            </div>
         <% end %>
     </div>
-    <%= yield %>
+        <%= yield %>
   </body>
 </html>
