--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,9 @@
 <% if current_user %>
-
 <div class="container">
     <div class="row">
         <div class="col-md-4">
             <h4><%= current_user.name %></h4>
-            <%= image_tag current_user.image_url, class: "img-thumbnail", alt: current_user.name %>
+            <%= image_tag current_user.image_url, class: "img-rounded", alt: current_user.name %>
         </div>
         <div class="col-md-8">
             <h4>Book Feed</h4>
@@ -12,5 +11,5 @@
     </div>
 </div>
 <% else %>
-  <%= render 'welcome' %>
+  <%= render 'shared/welcome' %>
 <% end %>
