--- a/app/views/pages/user.html.erb
+++ b/app/views/pages/user.html.erb
@@ -3,8 +3,12 @@
     <div class="row">
         <div class="col-md-4">
             <h4><%= @user.name %></h4>
-            <%= image_tag(@user.image_url) %>
+            <%= image_tag(@user.image_url, class: 'img-thumbnail') %>
             <p><%= @user.thoughts %></p>
+            <section class="stats">
+                <%= render 'shared/stats' %>
+            </section><br>
+            <%= render 'shared/toggle' if current_user %>
         </div>
         <div class="col-md-5">
             <% @books.each do |book| %>
