--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,15 @@
 <% if current_user %>
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <h4><%= current_user.name %></h4>
-            <%= image_tag current_user.image_url, class: "img-rounded", alt: current_user.name %>
-        </div>
-        <div class="col-md-8">
-            <h4>Book Feed</h4>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <%= render 'shared/intro' %>
+            </div>
+            <div class="col-md-8">
+                <h4>Book Feed</h4>
+                <%= render 'shared/feed' %>
+            </div>
         </div>
     </div>
-</div>
 <% else %>
-  <%= render 'shared/welcome' %>
+    <%= render 'shared/welcome' %>
 <% end %>
