--- a/app/views/pages/user.html.erb
+++ b/app/views/pages/user.html.erb
@@ -1,21 +1,11 @@
-
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <h4><%= @user.name %></h4>
-            <%= image_tag(@user.image_url, class: 'img-thumbnail') %>
-            <p><%= @user.thoughts %></p>
-            <section class="stats">
-                <%= render 'shared/stats' %>
-            </section><br>
+            <%= render 'shared/intro' %>
             <%= render 'shared/toggle' if current_user %>
         </div>
         <div class="col-md-5">
-            <% @books.each do |book| %>
-                <h5><%= link_to(book.title, book.info) %> by <%= book.author %></h5>
-                <%= image_tag(book.image) if book.image %>
-            <% end %><br>
-            <%= will_paginate @books %>
+            <%= render 'shared/feed' %>
         </div>
     </div>
 </div>
