--- a/app/views/shared/_welcome.html.erb
+++ b/app/views/shared/_welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
     <h2>Welcome to The Book Club!</h2>
-  <p>Share books that educate and entertain you. Follow the recommendations of like-minded readers.</p>
+  <p>Follow the recommendations of our community of readers. Log on using Facebook and share books that entertain and educate you.</p>
 </div>
 
