--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,8 @@
  *= require_self
  *= require font-awesome
  */
+.book-title {
+    margin-left: 15px;
+    font-size: 18px;
+    text-decoration: none !important;
+}
