--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,12 +1,13 @@
 <% if current_user %>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <%= render 'shared/intro' %>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-8">
                 <h4>Book Feed</h4>
-                <%= render 'shared/feed' %>
+                <%= render 'shared/book' %>
+                <%= will_paginate @books %>
             </div>
         </div>
     </div>
